# bahnaric-phoneme

./: .gitignore  Dockerfile  Dockerfile.base  README.md  devcontainer.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: dataset.py
