[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "Bahnaric Phoneme Segmentation"
name = "bahnaric-phoneme"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gdown = "^4.7.1"
librosa = "^0.10.1"
lightgbm = "^4.1.0"
matplotlib = "^3.8.2"
pandas = "^1.0"
praat-parselmouth = "^0.4.3"
praatio = "^6.1.0"
pyarrow = "^14.0.1"
python = "^3.10"
scikit-learn = "^1.3.2"
unidecode = "^1.3.7"
xgboost = "^1.7"

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
